[POLAR] Add SkinnerMT installation